# neural_networks_zero_to_hero

./: README.md  pyproject.toml
neural_networks_zero_to_hero/makemore/: build_makemore.ipynb  build_makemore_pt_i.ipynb  build_makemore_pt_ii_mlp.ipynb  build_makemore_pt_iii.ipynb
neural_networks_zero_to_hero/micrograd/: micrograd_from_scratch.ipynb
