[tool.poetry]
name = "neural-networks-zero-to-hero"
version = "0.1.0"
description = ""
authors = ["Kasra Safari <kasrasafari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
jupyter = "^1.0.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
graphviz = "^0.20.1"
torch = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
